-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0 RC2
-
None
-
Windows 8, large fonts, MSVC2012/64
-
b5520af6a9360d0032b6a54b1492147462cff91a
bool qtransform_equals_no_translate(const QTransform &a, const QTransform &b) is called with 2 transforms of type TxProject and then asserts.
D:\dev\5-vs12-rel\qt-rel\qtbase\tests\auto\gui\text\qstatictext>debug\tst_qstatictext.exe ********* Start testing of tst_QStaticText ********* Config: Using QtTest library 5.1.0, Qt 5.1.0 PASS : tst_QStaticText::initTestCase() PASS : tst_QStaticText::constructionAndDestruction() FAIL! : tst_QStaticText::drawToPoint(Moderate caching) Compared values are not the same tst_qstatictext.cpp(187) : failure location FAIL! : tst_QStaticText::drawToPoint(Aggressive caching) Compared values are no t the same tst_qstatictext.cpp(187) : failure location FAIL! : tst_QStaticText::drawToRect(Moderate caching) Compared values are not t he same tst_qstatictext.cpp(227) : failure location FAIL! : tst_QStaticText::drawToRect(Aggressive caching) Compared values are not the same tst_qstatictext.cpp(227) : failure location FAIL! : tst_QStaticText::setFont() Compared values are not the same tst_qstatictext.cpp(333) : failure location FAIL! : tst_QStaticText::setTextWidth() Compared values are not the same tst_qstatictext.cpp(356) : failure location PASS : tst_QStaticText::prepareToCorrectData() PASS : tst_QStaticText::prepareToWrongData() PASS : tst_QStaticText::copyConstructor() FAIL! : tst_QStaticText::translatedPainter() Compared values are not the same tst_qstatictext.cpp(383) : failure location FAIL! : tst_QStaticText::rotatedPainter() Compared values are not the same tst_qstatictext.cpp(423) : failure location FAIL! : tst_QStaticText::scaledPainter() Compared values are not the same tst_qstatictext.cpp(453) : failure location QFATAL : tst_QStaticText::projectedPainter() ASSERT: "b.type() < QTransform::TxP roject" in file text\qfontengine.cpp, line 63 FAIL! : tst_QStaticText::projectedPainter() Received a fatal error. Unknown file(0) : failure location Totals: 5 passed, 10 failed, 0 skipped ********* Finished testing of tst_QStaticText *********
Stack:
0 QMessageLogger::fatal qlogging.cpp 352 0x6ad08440 1 qt_assert qglobal.cpp 2015 0x6ad009f2 2 qtransform_equals_no_translate qfontengine.cpp 63 0x7f8dbb059f1 3 QFontEngine::glyphCache qfontengine.cpp 876 0x7f8dbb01a3f 4 QRasterPaintEngine::drawCachedGlyphs qpaintengine_raster.cpp 2820 0x7f8dbcf94a3 5 QRasterPaintEngine::drawTextItem qpaintengine_raster.cpp 3081 0x7f8dbcf7048 6 QPainterPrivate::drawTextItem qpainter.cpp 6473 0x7f8dbd20f7d 7 QPainter::drawTextItem qpainter.cpp 6343 0x7f8dbd1b8c9 8 QPainter::drawText qpainter.cpp 5913 0x7f8dbd1b194 9 QPainter::drawText qpainter.cpp 5694 0x7f8dbd1a8e2 10 QPainter::drawText qpainter.h 892 0x7f8db952343 11 tst_QStaticText::projectedPainter tst_qstatictext.cpp 467 0x7f73c6247b3 12 tst_QStaticText::qt_static_metacall tst_qstatictext.moc 176 0x7f73c621ac1 13 QMetaMethod::invoke qmetaobject.cpp 2157 0x6b0f49cd 14 QMetaObject::invokeMethod qmetaobject.cpp 1463 0x6b0f38bd 15 QMetaObject::invokeMethod qobjectdefs.h 396 0x6acdec39 16 QTest::qInvokeTestMethodDataEntry qtestcase.cpp 1697 0x7f8dc307024 17 QTest::qInvokeTestMethod qtestcase.cpp 1824 0x7f8dc30787d 18 QTest::qInvokeTestMethods qtestcase.cpp 1976 0x7f8dc307f8e 19 QTest::qExec qtestcase.cpp 2189 0x7f8dc302fbf 20 main tst_qstatictext.cpp 854 0x7f73c626d5a 21 __tmainCRTStartup crtexe.c 536 0x7f73c62c95d 22 mainCRTStartup crtexe.c 377 0x7f73c62ca8e 23 BaseThreadInitThunk KERNEL32 0x7f8f0fa1832 24 RtlUserThreadStart ntdll 0x7f8f231d609
Note: Further tests fail apparently due to large font setting.
- is required for
-
QTBUG-32183 Issues to be fixed in 5.1.1 (next patch release)
-
- Closed
-
- replaces
-
QTBUG-32261 flickr Example Crash - ASSERT: "b.type() < QTransform::TxProject"
-
- Closed
-