REG: Fix crash when mixing projected/unprojected text painting

Due to a refactoring done in Qt 5.1, we would try to do projected
text painting using the glyph cache in the raster engine (the logic
to avoid this was removed when refactoring). If you only did the
projected text drawing, then you would get unprojected text with
projected glyph positions and it would look wrong.

What's worse: If you first drew unprojected text with the same
font engine, so that the font engine already had a glyph cache
stored, we would hit an assert in qtransform_equals_no_translate
which assumes cached drawing is never used for projected painters.

This puts back the logic that we never cache projected text in
the glyph cache.

Task-number: QTBUG-32193
Change-Id: I1f919961c4cf498a9c4a0b1ceb0df1937ed0d067
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@digia.com>

cregit: b5520af6a9360d0032b6a54b1492147462cff91a https://github.com/qt/qtbase/commit/b5520af6a9360d0032b6a54b1492147462cff91a